# turnitin_rubric_export

./: .gitignore  README.md  main.py  pyproject.toml  template.html
templates/: turnitin.html
