[tool.poetry]
name = "turnitin_rubric_export"
version = "0.1.0"
description = "A tool to convert Turnitin Rubrics to HTML/PDF."
authors = ["Matt Pike <matpike@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

